--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "handlebars": "^4.7.8",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
-  }
+  },
+  "description": ""
 }
