--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
+    "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
   },
   "description": ""
+
 }
+
