--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
   }
