--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "keywords": [],
@@ -14,7 +13,7 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
   }
